force-app/main/default/objects/Commission__c/fields/Agency_No__c.field-meta.xml
<CustomField>
    <fullName>Agency_No__c</fullName>
    <label>Agency No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>