force-app/main/default/objects/Commission__c/fields/Booking_Dates__c.field-meta.xml
<CustomField>
    <fullName>Booking_Dates__c</fullName>
    <label>Booking Dates</label>
    <type>Date</type>
</CustomField>