force-app/main/default/objects/Commission__c/fields/Broker_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Broker_Commission_Amount__c</fullName>
    <label>Broker Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>