force-app/main/default/objects/Commission__c/fields/Commission_Category__c.field-meta.xml
<CustomField>
    <fullName>Commission_Category__c</fullName>
    <label>Commission Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>