force-app/main/default/objects/Commission__c/fields/Commission_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Commission_Scheme__c</fullName>
    <label>Commission Scheme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>