force-app/main/default/objects/Commission__c/fields/Commission_Status__c.field-meta.xml
<CustomField>
    <fullName>Commission_Status__c</fullName>
    <label>Commission Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Unpaid</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>