force-app/main/default/objects/Commission__c/fields/External_Commission__c.field-meta.xml
<CustomField>
    <fullName>External_Commission__c</fullName>
    <label>External Commission %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>