force-app/main/default/objects/Commission__c/fields/FGR_Unit__c.field-meta.xml
<CustomField>
    <fullName>FGR_Unit__c</fullName>
    <label>FGR Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>