force-app/main/default/objects/Commission__c/fields/PDC__c.field-meta.xml
<CustomField>
    <fullName>PDC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PDC</label>
    <type>Checkbox</type>
</CustomField>