force-app/main/default/objects/Commission__c/fields/Realized_Collections__c.field-meta.xml
<CustomField>
    <fullName>Realized_Collections__c</fullName>
    <label>Realized Collections</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>