force-app/main/default/objects/Commission__c/fields/Registered_Agency__c.field-meta.xml
<CustomField>
    <fullName>Registered_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registered Agency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>contains</operation>
            <value>Broker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commissions (Registered Agency)</relationshipLabel>
    <relationshipName>Commissions2</relationshipName>
    <type>Lookup</type>
</CustomField>