force-app/main/default/objects/Commission__c/fields/Sales_Executive_1__c.field-meta.xml
<CustomField>
    <fullName>Sales_Executive_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Executive 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>