force-app/main/default/objects/Commission__c/fields/Sales_Executive_2__c.field-meta.xml
<CustomField>
    <fullName>Sales_Executive_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Executive 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commissions1</relationshipName>
    <type>Lookup</type>
</CustomField>