force-app/main/default/objects/Commission__c/fields/SB_Number__c.field-meta.xml
<CustomField>
    <fullName>SB_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SB Number</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions1</relationshipName>
    <type>Lookup</type>
</CustomField>