force-app/main/default/objects/Commission__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Admin</fullName>
            </value>
            <value>
                <fullName>Sales Admin Manager Review</fullName>
            </value>
            <value>
                <fullName>Accountant Review</fullName>
            </value>
            <value>
                <fullName>Finance Manager Approval</fullName>
            </value>
            <value>
                <fullName>Audit Verification</fullName>
            </value>
            <value>
                <fullName>CEO Approval</fullName>
            </value>
            <value>
                <fullName>Request Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>