force-app/main/default/objects/Commission__c/fields/Unregistered_Agency__c.field-meta.xml
<CustomField>
    <fullName>Unregistered_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unregistered Agency</label>
    <referenceTo>Agency_Onboarding__c</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>