force-app/main/default/objects/Commission__c/fields/VP__c.field-meta.xml
<CustomField>
    <fullName>VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commissions3</relationshipName>
    <type>Lookup</type>
</CustomField>