force-app/main/default/objects/Commission__c/recordTypes/External_Commission.recordType-meta.xml
<RecordType>
    <fullName>External_Commission</fullName>
    <active>true</active>
    <label>External Commission</label>
</RecordType>