force-app/main/default/objects/Commission__c/recordTypes/Internal_Commission.recordType-meta.xml
<RecordType>
    <fullName>Internal_Commission</fullName>
    <active>true</active>
    <label>Internal Commission</label>
</RecordType>